// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BluetoothStateActions complete 1`] = `
Object {
  "payload": undefined,
  "type": "bluetooth_state/complete",
}
`;

exports[`BluetoothStateActions disable 1`] = `
Object {
  "payload": undefined,
  "type": "bluetooth_state/disable",
}
`;

exports[`BluetoothStateActions downloadTemperatures 1`] = `
Object {
  "payload": undefined,
  "type": "bluetooth_state/downloadTemperatures",
}
`;

exports[`BluetoothStateActions error 1`] = `
Object {
  "payload": undefined,
  "type": "bluetooth_state/error",
}
`;

exports[`BluetoothStateActions scanForSensors 1`] = `
Object {
  "payload": undefined,
  "type": "bluetooth_state/scanForSensors",
}
`;

exports[`BluetoothStateActions start 1`] = `
Object {
  "payload": undefined,
  "type": "bluetooth_state/start",
}
`;

exports[`BluetoothStateActions startTemperatureSync 1`] = `
Object {
  "payload": undefined,
  "type": "bluetooth_state/startTemperatureSync",
}
`;

exports[`PassiveBluetoothActions complete 1`] = `
Object {
  "payload": undefined,
  "type": "passive_bluetooth/complete",
}
`;

exports[`PassiveBluetoothActions completeTimer 1`] = `
Object {
  "payload": undefined,
  "type": "passive_bluetooth/completeTimer",
}
`;

exports[`PassiveBluetoothActions decrementTimer 1`] = `
Object {
  "payload": undefined,
  "type": "passive_bluetooth/decrementTimer",
}
`;

exports[`PassiveBluetoothActions start 1`] = `
Object {
  "payload": undefined,
  "type": "passive_bluetooth/start",
}
`;

exports[`PassiveBluetoothActions startTimer 1`] = `
Object {
  "payload": undefined,
  "type": "passive_bluetooth/startTimer",
}
`;

exports[`PassiveBluetoothActions stop 1`] = `
Object {
  "payload": undefined,
  "type": "passive_bluetooth/stop",
}
`;

exports[`PassiveBluetoothActions stopped 1`] = `
Object {
  "payload": undefined,
  "type": "passive_bluetooth/stopped",
}
`;
